2010-12-28  Jan Erik Hanssen  <jhanssen@sencha.com>

Reviewed by Eric Seidel.

        [Qt] GraphicsContext::getCTM() does not need to make a copy of QPainter::combinedTransform()
        https://bugs.webkit.org/show_bug.cgi?id=51687

        Use a const reference instead of a copy of QPainter::combinedTransform()
        in GraphicsContext::getCTM()

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::getCTM):

Canonical link: https://commits.webkit.org/65067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74728 268f45cc-cd09-0410-ab3c-d52691b4dbfc